--- a/manufacturing-comp-factory/docker-compose.yaml
+++ b/manufacturing-comp-factory/docker-compose.yaml
@@ -28,41 +28,57 @@ services:
       ARTEMIS_USERNAME: "qiotmanufacturing"
       ARTEMIS_PASSWORD: "qiotmanufacturingpassword"
 
-  kafka:
-    image: obsidiandynamics/kafka
-    container_name: "manufacturing-factory-kafka"
-    restart: "always"
-    networks:
-      - manufacturing-factory
-      - manufacturing-datacenterconnect
-    ports:
-      - "2181:2181"
-      - "9092:9092"
-    environment:
-      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-factory-kafka:29092,EXTERNAL://manufacturing-factory-kafka:9092"
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
-      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
-      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
-      KAFKA_RESTART_ATTEMPTS: "10"
-      KAFKA_RESTART_DELAY: "5"
-      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
+#  kafka:
+#    image: obsidiandynamics/kafka
+#    container_name: "manufacturing-factory-kafka"
+#    restart: "always"
+#    networks:
+#      - manufacturing-factory
+#      - manufacturing-datacenterconnect
+#    ports:
+#      - "2181:2181"
+#      - "9092:9092"
+#    environment:
+#      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
+#      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-factory-kafka:29092,EXTERNAL://manufacturing-factory-kafka:9092"
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+#      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+#      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
+#      KAFKA_RESTART_ATTEMPTS: "10"
+#      KAFKA_RESTART_DELAY: "5"
+#      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
 
   postgresql:
     image: postgres
-    container_name: "manufacturing-factory-postgresql"
+    container_name: "manufacturing-factory-sqlstorage"
     restart: always
     ports:
       - "5432:5432"
     volumes:
       - postgres-storage:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: "qiot"
-      POSTGRES_PASSWORD: "qiot"
-      POSTGRES_DB: "qiot"
+      POSTGRES_USER: "qiotmanufacturing"
+      POSTGRES_PASSWORD: "qiotmanufacturingpassword"
+      POSTGRES_DB: "qiot_manufacturing"
+      
+  mongo:
+    image: mongo
+    container_name: "manufacturing-factory-nosqlstorage"
+    environment:
+      MONGO_INITDB_DATABASE: "qiot_manufacturing"
+      #MONGO_INITDB_ROOT_USERNAME: "qiotmanufacturing"
+      #MONGO_INITDB_ROOT_PASSWORD: "qiotmanufacturingpassword"
+      MONGO_INITDB_ROOT_USERNAME: "qiotroot"
+      MONGO_INITDB_ROOT_PASSWORD: "qiotrootpassword"
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - mongo-storage:/data/db
       
 volumes:
   postgres-storage:
+  mongo-storage:
 networks:
   manufacturing-datacenterconnect:
     external: true
