--- a/manufacturing-comp-datacenter/docker-compose.yaml
+++ b/manufacturing-comp-datacenter/docker-compose.yaml
@@ -1,22 +1,6 @@
 version: '3'
 services:
 
-  activemq:
-    image: vromero/activemq-artemis:latest-alpine
-    container_name: "manufacturing-factory-broker"
-    restart: "always"
-    networks:
-      - manufacturing-factory
-      - manufacturing-factoryconnect
-    ports:
-    - "61617:61616"
-    - "1884:1883"
-    - "5673:5672"
-    - "8162:8161"
-    environment:
-      ARTEMIS_USERNAME: "qiotmanufacturing"
-      ARTEMIS_PASSWORD: "qiotmanufacturingpassword"
-
   kafka:
     image: obsidiandynamics/kafka
     container_name: "manufacturing-datacenter-kafka"
@@ -25,11 +9,11 @@ services:
       - manufacturing-datacenter
       - manufacturing-datacenterconnect
     ports:
-      - "2182:2181"
-      - "9093:9092"
+      - "2181:2181"
+      - "9092:9092"
     environment:
-      KAFKA_LISTENERS: "INTERNAL://:29093,EXTERNAL://:9093"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29093,EXTERNAL://manufacturing-datacenter-kafka:9093"
+      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://manufacturing-datacenter-kafka:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
@@ -37,66 +21,80 @@ services:
       KAFKA_RESTART_DELAY: "5"
       ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
 
-  postgresql:
-    image: postgres
-    container_name: "manufacturing-datacenter-postgresql"
-    restart: always
-    ports:
-      - "5433:5432"
-    volumes:
-      - postgres-storage:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: "qiotmanufacturing"
-      POSTGRES_PASSWORD: "qiotmanufacturingpassword"
-      POSTGRES_DB: "qiot_manufacturing"
+#  postgresql:
+#    image: postgres
+#    container_name: "manufacturing-datacenter-postgresql"
+#    restart: always
+#    ports:
+#      - "5433:5432"
+#    volumes:
+#      - postgres-storage:/var/lib/postgresql/data
+#    environment:
+#      POSTGRES_USER: "qiotmanufacturing"
+#      POSTGRES_PASSWORD: "qiotmanufacturingpassword"
+#      POSTGRES_DB: "qiot_manufacturing"
       
-  influxdb:
-    image: "influxdb:latest"
-    container_name: "manufacturing-datacenter-influxdb"
-    ports:
-      - "8086:8086"
-      - "9999:9999"
-    volumes:
-      - influxdb-user-storage:/root/.influxdbv2
-      - influxdb-data-storage:/var/lib/influxdb2
-      - influxdb-config-storage:/etc/influxdb2
+  mongo:
+    image: mongo
+    container_name: "manufacturing-datacenter-nosqlstorage"
     environment:
-      DOCKER_INFLUXDB_INIT_MODE: "setup"
-      DOCKER_INFLUXDB_INIT_USERNAME: "qiotmanufacturing"
-      DOCKER_INFLUXDB_INIT_PASSWORD: "qiotmanufacturingpassword"
-      DOCKER_INFLUXDB_INIT_ORG: "qiot"
-      DOCKER_INFLUXDB_INIT_BUCKET: "manufacturing"
-#     DOCKER_INFLUXDB_INIT_RETENTION: The duration the system's initial bucket should retain data. If not set, the initial bucket will retain data forever
-      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "qiotmanufacturinginfluxdbtoken"
+      MONGO_INITDB_DATABASE: "qiot_manufacturing"
+      #MONGO_INITDB_ROOT_USERNAME: "qiotmanufacturing"
+      #MONGO_INITDB_ROOT_PASSWORD: "qiotmanufacturingpassword"
+      MONGO_INITDB_ROOT_USERNAME: "qiotroot"
+      MONGO_INITDB_ROOT_PASSWORD: "qiotrootpassword"
+    ports:
+      - "27018:27017"
+    volumes:
+      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - mongo-storage:/data/db
       
-  grafana:
-    image: "grafana/grafana"
-    container_name: "manufacturing-datacenter-grafana"
-    links:
-      - influxdb
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana-storage:/var/lib/grafana
-      - ./volumes/grafana/provisioning:/etc/grafana/provisioning
-    depends_on:
-      - influxdb
-    environment:
-      GF_SECURITY_ADMIN_USER: "qiotmanufacturing"
-      GF_SECURITY_ADMIN_PASSWORD: "qiotmanufacturingpassword"
+#  influxdb:
+#    image: "influxdb:latest"
+#    container_name: "manufacturing-datacenter-influxdb"
+#    ports:
+#      - "8086:8086"
+#      - "9999:9999"
+#    volumes:
+#      - influxdb-user-storage:/root/.influxdbv2
+#      - influxdb-data-storage:/var/lib/influxdb2
+#      - influxdb-config-storage:/etc/influxdb2
+#    environment:
+#      DOCKER_INFLUXDB_INIT_MODE: "setup"
+#      DOCKER_INFLUXDB_INIT_USERNAME: "qiotmanufacturing"
+#      DOCKER_INFLUXDB_INIT_PASSWORD: "qiotmanufacturingpassword"
+#      DOCKER_INFLUXDB_INIT_ORG: "qiot"
+#      DOCKER_INFLUXDB_INIT_BUCKET: "manufacturing"
+##     DOCKER_INFLUXDB_INIT_RETENTION: The duration the system's initial bucket should retain data. If not set, the initial bucket will retain data forever
+#      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "qiotmanufacturinginfluxdbtoken"
+      
+#  grafana:
+#    image: "grafana/grafana"
+#    container_name: "manufacturing-datacenter-grafana"
+#    links:
+#      - influxdb
+#    ports:
+#      - "3000:3000"
+#    volumes:
+#      - grafana-storage:/var/lib/grafana
+#      - ./volumes/grafana/provisioning:/etc/grafana/provisioning
+#    depends_on:
+#      - influxdb
+#    environment:
+#      GF_SECURITY_ADMIN_USER: "qiotmanufacturing"
+#      GF_SECURITY_ADMIN_PASSWORD: "qiotmanufacturingpassword"
       
 volumes:
+  postgres-storage:
+  mongo-storage:
   influxdb-user-storage:
   influxdb-data-storage:
   influxdb-config-storage:
   grafana-storage:
-  postgres-storage:
 networks:
   manufacturing-datacenter:
     external: true
   manufacturing-datacenterconnect:
-    external: true
-  manufacturing-factoryconnect:
     external: true
   default:
     external:
