--- a/manufacturing-comp-datacenter/docker-compose.yaml
+++ b/manufacturing-comp-datacenter/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - "9092:9092"
     environment:
       KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://manufacturing-datacenter-kafka:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://localhost:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
