--- a/manufacturing-comp-datacenter/container-compose.yaml
+++ b/manufacturing-comp-datacenter/container-compose.yaml
@@ -21,18 +21,18 @@ services:
       KAFKA_RESTART_DELAY: "5"
       ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
 
-#  postgresql:
-#    image: postgres
-#    container_name: "manufacturing-datacenter-postgresql"
-#    restart: always
-#    ports:
-#      - "5433:5432"
-#    volumes:
-#      - postgres-storage:/var/lib/postgresql/data
-#    environment:
-#      POSTGRES_USER: "qiotmanufacturing"
-#      POSTGRES_PASSWORD: "qiotmanufacturingpassword"
-#      POSTGRES_DB: "qiot_manufacturing"
+  postgresql:
+    image: postgres
+    container_name: "manufacturing-datacenter-postgresql"
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres-storage:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: "qiotmanufacturing"
+      POSTGRES_PASSWORD: "qiotmanufacturingpassword"
+      POSTGRES_DB: "qiot_manufacturing"
       
   mongo:
     image: mongo
