--- a/manufacturing-comp-datacenter/container-compose.yaml
+++ b/manufacturing-comp-datacenter/container-compose.yaml
@@ -49,24 +49,24 @@ services:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongo-storage:/data/db
       
-#  influxdb:
-#    image: "influxdb:latest"
-#    container_name: "manufacturing-datacenter-influxdb"
-#    ports:
-#      - "8086:8086"
-#      - "9999:9999"
-#    volumes:
-#      - influxdb-user-storage:/root/.influxdbv2
-#      - influxdb-data-storage:/var/lib/influxdb2
-#      - influxdb-config-storage:/etc/influxdb2
-#    environment:
-#      DOCKER_INFLUXDB_INIT_MODE: "setup"
-#      DOCKER_INFLUXDB_INIT_USERNAME: "qiotmanufacturing"
-#      DOCKER_INFLUXDB_INIT_PASSWORD: "qiotmanufacturingpassword"
-#      DOCKER_INFLUXDB_INIT_ORG: "qiot"
-#      DOCKER_INFLUXDB_INIT_BUCKET: "manufacturing"
-##     DOCKER_INFLUXDB_INIT_RETENTION: The duration the system's initial bucket should retain data. If not set, the initial bucket will retain data forever
-#      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "qiotmanufacturinginfluxdbtoken"
+  influxdb:
+    image: "influxdb:latest"
+    container_name: "manufacturing-datacenter-influxdb"
+    ports:
+      - "8086:8086"
+      - "9999:9999"
+    volumes:
+      - influxdb-user-storage:/root/.influxdbv2
+      - influxdb-data-storage:/var/lib/influxdb2
+      - influxdb-config-storage:/etc/influxdb2
+    environment:
+      DOCKER_INFLUXDB_INIT_MODE: "setup"
+      DOCKER_INFLUXDB_INIT_USERNAME: "qiotmanufacturing"
+      DOCKER_INFLUXDB_INIT_PASSWORD: "qiotmanufacturingpassword"
+      DOCKER_INFLUXDB_INIT_ORG: "qiot"
+      DOCKER_INFLUXDB_INIT_BUCKET: "manufacturing"
+#     DOCKER_INFLUXDB_INIT_RETENTION: The duration the system's initial bucket should retain data. If not set, the initial bucket will retain data forever
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "qiotmanufacturinginfluxdbtoken"
       
 #  grafana:
 #    image: "grafana/grafana"
