--- a/manufacturing-comp-datacenter/container-compose.yaml
+++ b/manufacturing-comp-datacenter/container-compose.yaml
@@ -1,19 +1,22 @@
 version: '3'
 services:
 
-  kafka:
+  manufacturing-datacenter-kafka:
     image: obsidiandynamics/kafka
     container_name: "manufacturing-datacenter-kafka"
     restart: "always"
     networks:
       - manufacturing-datacenter
       - manufacturing-datacenterconnect
+    expose:
+      - 2181
+      - 9092
     ports:
       - "2181:2181"
       - "9092:9092"
     environment:
       KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://localhost:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://manufacturing-datacenter-kafka:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
@@ -21,10 +24,14 @@ services:
       KAFKA_RESTART_DELAY: "5"
       ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
 
-  postgresql:
+  manufacturing-datacenter-sqlstorage:
     image: postgres
-    container_name: "manufacturing-datacenter-postgresql"
-    restart: always
+    container_name: "manufacturing-datacenter-sqlstorage"
+    restart: "always"
+    networks:
+      - manufacturing-datacenter
+    expose:
+      - "5432"
     ports:
       - "5433:5432"
     volumes:
@@ -34,24 +41,35 @@ services:
       POSTGRES_PASSWORD: "qiotmanufacturingpassword"
       POSTGRES_DB: "qiot_manufacturing"
       
-  mongo:
+  manufacturing-datacenter-nosqlstorage:
     image: mongo
     container_name: "manufacturing-datacenter-nosqlstorage"
+    restart: "always"
+    networks:
+      - manufacturing-datacenter
+    expose:
+      - "27017"
+    ports:
+      - "27018:27017"
     environment:
       MONGO_INITDB_DATABASE: "qiot_manufacturing"
       #MONGO_INITDB_ROOT_USERNAME: "qiotmanufacturing"
       #MONGO_INITDB_ROOT_PASSWORD: "qiotmanufacturingpassword"
       MONGO_INITDB_ROOT_USERNAME: "qiotroot"
       MONGO_INITDB_ROOT_PASSWORD: "qiotrootpassword"
-    ports:
-      - "27018:27017"
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongo-storage:/data/db
       
-  influxdb:
+  manufacturing-datacenter-influxdb:
     image: "influxdb:latest"
     container_name: "manufacturing-datacenter-influxdb"
+    restart: "always"
+    networks:
+      - manufacturing-datacenter
+    expose:
+      - "8086"
+      - "9999"
     ports:
       - "8086:8086"
       - "9999:9999"
@@ -67,7 +85,7 @@ services:
       DOCKER_INFLUXDB_INIT_BUCKET: "manufacturing"
 #     DOCKER_INFLUXDB_INIT_RETENTION: The duration the system's initial bucket should retain data. If not set, the initial bucket will retain data forever
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "qiotmanufacturinginfluxdbtoken"
-      
+          
 #  grafana:
 #    image: "grafana/grafana"
 #    container_name: "manufacturing-datacenter-grafana"
@@ -83,6 +101,7 @@ services:
 #    environment:
 #      GF_SECURITY_ADMIN_USER: "qiotmanufacturing"
 #      GF_SECURITY_ADMIN_PASSWORD: "qiotmanufacturingpassword"
+
       
 volumes:
   postgres-storage:
