--- a/multi-layer/datacenter/container-compose.yaml
+++ b/multi-layer/datacenter/container-compose.yaml
@@ -14,10 +14,11 @@ services:
     ports:
       - "2181:2181"
       - "9092:9092"
+      - "9093:9093"
     environment:
-      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://manufacturing-datacenter-kafka:9092"
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092,DEMO://:9093"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://manufacturing-datacenter-kafka:29092,EXTERNAL://manufacturing-datacenter-kafka:9092,DEMO://datacenter.local:9093"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DEMO:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
       KAFKA_RESTART_ATTEMPTS: "10"
@@ -32,6 +33,8 @@ services:
       - demo-manufacturing-datacenter
     expose:
       - "5432"
+    ports:
+      - "5432:5432"
     volumes:
       - demo-datacenter-postgres-storage:/var/lib/postgresql/data
     environment:
