--- a/manufacturing-all/container-compose.yaml
+++ b/manufacturing-all/container-compose.yaml
@@ -106,7 +106,7 @@ services:
 
 
   manufacturing-datacenter-registration-service:
-    image: quay.io/qiotmanufacturing/datacenter-registration:1.0.0-beta1
+    image: quay.io/qiotproject/all-registration:1.0.0-SNAPSHOT
     container_name: "manufacturing-datacenter-registration-service"
     restart: "always"
     networks:
@@ -122,7 +122,7 @@ services:
       CERT_MANAGER_ENABLED: "false"
 
   manufacturing-datacenter-plant-manager-service:
-    image: quay.io/qiotmanufacturing/datacenter-plant-manager:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/datacenter-plant-manager:1.0.0-SNAPSHOT
     container_name: "manufacturing-datacenter-plant-manager-service"
     restart: "always"
     networks:
@@ -134,6 +134,9 @@ services:
     ports:
       - "5200:8080"
       - "5243:8443"
+    depends_on:
+      - "manufacturing-datacenter-sqlstorage"
+      - "manufacturing-datacenter-registration-service"
     environment:
       QUARKUS_PROFILE: "staging"
 #      LOG_LEVEL: "DEBUG"
@@ -144,7 +147,7 @@ services:
       REGISTRATION_SERVICE_URL: "http://manufacturing-datacenter-registration-service:8080"
 
   manufacturing-datacenter-productline-service:
-    image: quay.io/qiotmanufacturing/datacenter-product-line:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/datacenter-product-line:1.0.0-SNAPSHOT
     container_name: "manufacturing-datacenter-productline-service"
     restart: "always"
     networks:
@@ -152,6 +155,9 @@ services:
       - manufacturing-datacenterconnect
     ports:
       - "5201:8080"
+    depends_on:
+      - "manufacturing-datacenter-nosqlstorage"
+      - "manufacturing-datacenter-kafka"
     environment:
       QUARKUS_PROFILE: "staging"
 #      LOG_LEVEL: "DEBUG"
@@ -166,11 +172,14 @@ services:
       KAFKA_BOOTSTRAP_URL: "manufacturing-datacenter-kafka:9092"
 
   manufacturing-datacenter-eventcollector-service:
-    image: quay.io/qiotmanufacturing/datacenter-event-collector-jvm:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/datacenter-event-collector-jvm:1.0.0-SNAPSHOT
     container_name: "manufacturing-datacenter-eventcollector-service"
     restart: "always"
     networks:
       - manufacturing-datacenter
+    depends_on:
+      - "manufacturing-datacenter-influxdb"
+      - "manufacturing-datacenter-kafka"
     environment:
       QUARKUS_PROFILE: "staging"
 #      LOG_LEVEL: "DEBUG"
@@ -238,9 +247,23 @@ services:
       #MONGO_INITDB_ROOT_PASSWORD: "qiotmanufacturingpassword"
       MONGO_INITDB_ROOT_USERNAME: "qiotroot"
       MONGO_INITDB_ROOT_PASSWORD: "qiotrootpassword"
+          
+  manufacturing-factory-registration-service:
+    image: quay.io/qiotproject/all-registration:1.0.0-SNAPSHOT
+    container_name: "manufacturing-factory-registration-service"
+    restart: "always"
+    networks:
+      - manufacturing-factory
+    expose:
+      - "8080"
+    environment:
+      QUARKUS_PROFILE: "staging"
+#      LOG_LEVEL: "DEBUG"
+#      QIOT_LOG_LEVEL: "DEBUG"
+      CERT_MANAGER_ENABLED: "false"
 
   manufacturing-factory-facility-manager-service:
-    image: quay.io/qiotmanufacturing/factory-facility-manager:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/factory-facility-manager:1.0.0-SNAPSHOT
     container_name: "manufacturing-factory-facility-manager-service"
     restart: "always"
     networks:
@@ -253,6 +276,9 @@ services:
     ports:
       - "5100:8080"
       - "5143:8443"
+    depends_on:
+      - "manufacturing-factory-sqlstorage"
+      - "manufacturing-factory-registration-service"
     volumes:
       - factory-shared-storage:/var/data/qiot
     environment:
@@ -266,11 +292,11 @@ services:
       FACTORY_NAME: "testfactoryname01"
       CERT_STORE_PASSWORD: "123456"
       PLANT_MANAGER_SERVICE_URL: "http://manufacturing-datacenter-plant-manager-service:8080"
-#      PLANT_MANAGER_SERVICE_URL: "https://manufacturing-datacenter-plant-manager-service:8443"
 #      DO_RESET: "true"
+      REGISTRATION_SERVICE_URL: "http://manufacturing-factory-registration-service:8080"
 
   manufacturing-factory-productline-service:
-    image: quay.io/qiotmanufacturing/factory-product-line:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/factory-product-line:1.0.0-SNAPSHOT
     container_name: "manufacturing-factory-productline-service"
     restart: "always"
     networks:
@@ -297,7 +323,7 @@ services:
       KAFKA_BOOTSTRAP_URL: "manufacturing-datacenter-kafka:9092"
 
   manufacturing-factory-validator-service:
-    image: quay.io/qiotmanufacturing/factory-production-validator:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/factory-production-validator:1.0.0-SNAPSHOT
     container_name: "manufacturing-factory-validator-service"
     restart: "always"
     networks:
@@ -326,7 +352,7 @@ services:
 
 
   manufacturing-edge-machinery-service:
-    image: quay.io/qiotmanufacturing/edge-machinery:1.0.0-beta1
+    image: quay.io/qiotmanufacturing/edge-machinery:1.0.0-SNAPSHOT
     container_name: "manufacturing-edge-machinery-service"
     restart: "always"
     networks:
